# envdrift

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  RELEASING.md  TECH_SPEC.md  TODO.md  VERSIONING_QUESTION.md  ammend.md  codecov.yml  commitlint.config.cjs  envdrift.toml  h  install.ps1  install.sh  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  report_scan.md  spec.md
.claude/workflows/: coverage-orchestrator.js
.gemini/tasks/: pr-73-fixes.md
.github/: PR_111_FIXES.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: install_test_binaries.py
.github/workflows/: agent-ci.yml  agent-release.yml  automerge-version-bump.yml  ci.yml  codeql.yml  codspeed.yml  commitlint.yml  cross-platform-integration.yml  cross-platform.yml  docs.yml  installer-e2e.yml  integration-tests.yml  publish.yml  release-drift-audit.yml  release-drift-check.yml  release-please.yml  semantic-pr.yml  vscode-ci.yml  vscode-release.yml
docs/: agent-spec.md  glossary.md  index.md
docs/cli/: decrypt.md  diff.md  encrypt.md  guard.md  hook.md  index.md  init.md  lock.md  pull-partial.md  pull.md  push.md  sync.md  validate.md  vault-pull.md  vault-push.md  version.md
docs/concepts/: encryption-backends.md  how-it-works.md  index.md  vault-providers.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: agent-setup.md  cicd.md  contributing.md  encryption.md  env-file-sync.md  guard.md  migrating.md  monorepo-setup.md  partial-encryption.md  releasing.md  schema.md  sops.md  vault-sync.md  vscode-extension.md
docs/reference/: api.md  cli.md  configuration.md  testing.md
docs/specs/: guard-command-spec.md  integration-tests-spec.md  new-guards-spec.md  smart-encryption-spec.md
docs/support/: faq.md  troubleshooting.md
envdrift-agent/: CHANGELOG.md  CONTRIBUTING.md  README.md  go.mod  go.sum
envdrift-vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
envdrift-vscode/src/: agentCore.ts  agentStatus.ts  config.ts  encryption.ts  extension.ts  fileWatcher.ts  logger.ts  statusBar.ts  utils.ts
path/to/: README.md  automerge-version-bump.yml  integration-tests.yml  renovate.json
playground/: .gitignore  README.md  envdrift.toml
playground/schemas/: settings.py
scripts/agent/: README.md  gate-watchdog.sh  limit-wake-timer.sh
src/envdrift/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.json  core.py  env_files.py  install_integrity.py  utils.py
tests/: conftest.py  docker-compose.test.yml  helpers.py  test_cli.py  test_vscode_cli_contract.py
tests/benchmarks/: __init__.py  test_benchmarks.py
tests/integration/: conftest.py  test_aws_integration.py  test_azure_integration.py  test_cli_e2e.py  test_concurrency.py  test_config_fail_loudly_cli.py  test_decrypt_outcome_bench.py  (+37 more)
(+214 files in other folders)
